@@ -14,6 +14,8 @@
 ; ulong		== (unsigned long)
 ; octal		== (unsigned)			[written in octal]
 ; char
+; short		== (short)
+; ushort	== (unsigned short)
 ; addr		== (void *)			[unsigned, written in hexa]
 ; file		== (FILE *)						[TODO]
 ; format	== ((const char *), ...)	[printf() like]		[TODO]
@@ -154,8 +156,8 @@ addr getservbyport(int, string);
 addr getservent(void);
 void herror(string);
 string hstrerror(int);
-;int rcmd(addr, ushort, string, string, string, addr); FIXME implement ushort
-;int rcmd_af(addr, ushort, string, string, string, addr, int); FIXME implement ushort
+int rcmd(addr, ushort, string, string, string, addr);
+int rcmd_af(addr, ushort, string, string, string, addr, int);
 int rexec(addr, int, string, string, string, addr);
 int rexec_af(addr, int, string, string, string, addr, int);
 int rresvport (addr);
