@@ -41,3 +41,18 @@ void func_enum(int x)
 {
 	printf("enum: %d\n", x);
 }
+
+void func_short(short x1, short x2)
+{
+	printf("short: %hd %hd\n", x1, x2);
+}
+
+void func_ushort(unsigned short x1, unsigned short x2)
+{
+	printf("ushort: %hu %hu\n", x1, x2);
+}
+
+void func_float(float f1, float f2)
+{
+	printf("%f %f\n", f1, f2);
+}
